add new destination

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <div class="destination" id="barcelona">
                 <h2>Sao Paolo</h2>
             </div>
+
+             <div class="destination" id="ciudad-del-este">
+                <h2>Ciudad del Este</h2>
+            </div>
         </div>
     </div>
 
